Opened 15 years ago

Closed 15 years ago

#574 closed defect (fixed)

latm_aac decoding regression (corrupted audio)

Reported by: Hendrik Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: latm aac regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Hi,

Attached latm_aac file decodes rather corrupted after the fix for Ticket200. Its a recoding from DVB-T, demuxed from mpeg-ts.

Reverting the change in question fixes the problem.
For reference, this commit:
http://git.videolan.org/?p=ffmpeg.git;a=commit;h=0bc5d4fd8bbb63be172978e888834a88a1e64fb0

FWIW, i rather similar change was applied before, and reverted after, because it also broke decoding of some samples, see here:
http://git.videolan.org/?p=ffmpeg.git;a=commitdiff;h=d6f66edd65992c1275f8e4271be212e1a4808425

ffmpeg log:

command:ffmpeg -i Issue200Regression.latm out.ac3

ffmpeg version 0.8.5.git, Copyright (c) 2000-2011 the FFmpeg developers

built on Oct 18 2011 17:47:31 with gcc 4.6.1
configuration: --extra-cflags='-mmmx -msse' --enable-shared --enable-memalign-hack --enable-gpl --enable-w32threads --

enable-runtime-cpudetect --enable-asm --disable-postproc --enable-zlib --disable-static --disable-altivec --enable-muxer
s --enable-encoders --enable-debug --enable-ffplay --disable-avconv --disable-ffserver --enable-ffmpeg --enable-ffprobe
--disable-devices --disable-filters --disable-avfilter --enable-swscale --disable-avdevice --disable-hwaccels --enable-b
sfs --disable-network --arch=x86 --cpu=i686 --target-os=mingw32

libavutil 51. 21. 0 / 51. 21. 0
libavcodec 53. 21. 0 / 53. 21. 0
libavformat 53. 16. 1 / 53. 16. 1
libswscale 2. 1. 0 / 2. 1. 0

[loas @ 00499040] max_analyze_duration 5000000 reached at 5034667
[loas @ 00499040] Estimating duration from bitrate, this may be inaccurate
Input #0, loas, from 'Issue200Regression.latm':

Duration: N/A, bitrate: N/A

Stream #0:0: Audio: aac_latm, 48000 Hz, 2 channels (FC), s16

Incompatible sample format 's16' for codec 'ac3', auto-selecting format 'flt'
[ac3 @ 00680a60] channel_layout not specified
[ac3 @ 00680a60] No channel layout specified. The encoder will guess the layout, but it might be incorrect.
Output #0, ac3, to 'out.ac3':

Metadata:

encoder : Lavf53.16.1
Stream #0:0: Audio: ac3, 48000 Hz, stereo, flt, 128 kb/s

Stream mapping:

Stream #0.0 -> #0.0 (aac_latm -> ac3)

Press [q] to stop, ? for help
[SWR @ 00670ec0] Input channel layout has a different number of channels than there actually is, ignoring layout
size= 212kB time=00:00:13.56 bitrate= 128.0kbits/s
video:0kB audio:212kB global headers:0kB muxing overhead 0.000000%

Attachments (1)

Issue200Regression.latm (81.5 KB ) - added by Hendrik 15 years ago.
Sample LATM AAC

Download all attachments as: .zip

Change History (3)

by Hendrik, 15 years ago

Attachment: Issue200Regression.latm added

Sample LATM AAC

comment:1 by Carl Eugen Hoyos, 15 years ago

Keywords: regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen

out.wav sounds distorted.

$ ffmpeg -i Issue200Regression.latm out.wav
ffmpeg version N-33822-ge6e86e6, Copyright (c) 2000-2011 the FFmpeg developers
  built on Oct 20 2011 18:14:22 with gcc 4.5.3
  configuration: --cc=/usr/local/gcc-4.5.3/bin/gcc
  libavutil    51. 22. 0 / 51. 22. 0
  libavcodec   53. 22. 0 / 53. 22. 0
  libavformat  53. 17. 0 / 53. 17. 0
  libavdevice  53.  4. 0 / 53.  4. 0
  libavfilter   2. 44. 1 /  2. 44. 1
  libswscale    2.  1. 0 /  2.  1. 0
[loas @ 0x1304780] max_analyze_duration 5000000 reached at 5034667
[loas @ 0x1304780] Estimating duration from bitrate, this may be inaccurate
Input #0, loas, from 'Issue200Regression.latm':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Audio: aac_latm, 48000 Hz, 2 channels (FC), s16
Output #0, wav, to 'out.wav':
  Metadata:
    encoder         : Lavf53.17.0
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, 2 channels, s16, 1536 kb/s
Stream mapping:
  Stream #0.0 -> #0.0 (aac_latm -> pcm_s16le)
Press [q] to stop, [?] for help
size=    2544kB time=00:00:13.56 bitrate=1536.0kbits/s
video:0kB audio:2544kB global headers:0kB muxing overhead 0.001766%

comment:2 by Michael Niedermayer, 15 years ago

Resolution: fixed
Status: openclosed

Fixed

Note: See TracTickets for help on using tickets.