aacdec:only overwrite configuration if theres a actual change. Fixes Ticket574

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>